[package]
name = "twishuffler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
rocket_contrib = "0.4.11"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
twitter-v2 = "0.1.8"
serde_json = "1.0.87"
rand = "0.8.5"
